# deploy_ml

./: README.md  pyproject.toml
src/data/: data_loader.py  data_processor.py  data_splitter.py
src/model/: evaluator.py  main.py  saver.py  trainer.py
